<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#061B34"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo__2" />
    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/todo__2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/et_profile"
        app:layout_constraintBottom_toTopOf="@id/et_profile"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/et_profile_email"
        app:layout_constraintBottom_toTopOf="@id/et_profile_email"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/et_profile_phone"
        app:layout_constraintBottom_toTopOf="@id/et_profile_phone"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/et_profile_gender"
        app:layout_constraintBottom_toTopOf="@id/et_profile_gender"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/et_profile_date_of_birth"
        app:layout_constraintBottom_toTopOf="@id/et_profile_date_of_birth"
        />
    <EditText
        android:id="@+id/et_profile"
        android:layout_width="370dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        android:hint="@string/enter_username"
        android:textColor="@color/black"
        android:layout_marginTop="75dp"
        />
    <EditText
        android:id="@+id/et_profile_email"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_profile"
        android:hint="@string/enter_email"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/et_profile_phone"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_profile_email"
        android:hint="@string/enter_number"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/et_profile_gender"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_profile_phone"
        android:hint="@string/enter_gender"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/et_profile_date_of_birth"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_profile_gender"
        android:hint="@string/enter_date_of_birth"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        />
    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_delete"
        app:layout_constraintTop_toBottomOf="@id/et_profile_date_of_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>