<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="36dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onBoard.OnBoardPageFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/img_board"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img1"
        />

    <TextView
        android:id="@+id/tv_title_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_onBoardPage"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/img_board"
        />

    <TextView
        android:id="@+id/tv_desc_board"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_board"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/here_you_can_write_down_something_important_or_make_a_schedule_for_tomorrow"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btn_skip"
        android:layout_marginEnd="16dp"
        app:cornerRadius="64dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_skip"

         
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="44dp"
        android:paddingVertical="20dp"
        app:cornerRadius="64dp"
        android:backgroundTint="@color/black"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>